--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
     </section>
   </div>
   <div class="container">
-    <div class="footer_bottom">Copyright &copy; 2016.Company name All rights reserved.<a target="_blank" href="http://sc.chinaz.com/moban/">&#x7F51;&#x9875;&#x6A21;&#x677F;</a></div>
+    <div class="footer_bottom">Copyright &copy; 2016.Company name All rights reserved.</div>
   </div>
 </footer>
 
